[gd_scene load_steps=2 format=3 uid="uid://b8rj3nxg4k2pm"]

[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="1"]
[ext_resource type="Script" path="res://scenes/ui/screens/MarketScreen.gd" id="1_market"]

[node name="MarketScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("1_market")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pazar"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="ItemSelector" type="OptionButton" parent="MarginContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(350, 60)
theme_override_font_sizes/font_size = 20

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="MainHBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="OrderBookPanel" type="PanelContainer" parent="MarginContainer/VBox/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/MainHBox/OrderBookPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/MainHBox/OrderBookPanel/VBox"]
layout_mode = 2
text = "Emir Defteri"
theme_override_font_sizes/font_size = 20

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/MainHBox/OrderBookPanel/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox/MainHBox/OrderBookPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="OrderBookList" type="VBoxContainer" parent="MarginContainer/VBox/MainHBox/OrderBookPanel/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="TradingPanel" type="PanelContainer" parent="MarginContainer/VBox/MainHBox"]
layout_mode = 2
custom_minimum_size = Vector2(350, 0)

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/MainHBox/TradingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox"]
layout_mode = 2
text = "Emir Ver"
theme_override_font_sizes/font_size = 20

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox"]
layout_mode = 2

[node name="OrderTypeTabs" type="TabContainer" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Al" type="VBoxContainer" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PriceLabel" type="Label" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Al"]
layout_mode = 2
text = "Fiyat (Altın)"

[node name="PriceInput" type="SpinBox" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Al"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="QuantityLabel" type="Label" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Al"]
layout_mode = 2
text = "Miktar"

[node name="QuantityInput" type="SpinBox" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Al"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TotalLabel" type="Label" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Al"]
unique_name_in_owner = true
layout_mode = 2
text = "Toplam: 0 Altın"
theme_override_font_sizes/font_size = 16

[node name="BuyButton" type="Button" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Al"]
unique_name_in_owner = true
layout_mode = 2
text = "Satın Al"

[node name="Sat" type="VBoxContainer" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="SellPriceLabel" type="Label" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Sat"]
layout_mode = 2
text = "Fiyat (Altın)"

[node name="SellPriceInput" type="SpinBox" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Sat"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SellQuantityLabel" type="Label" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Sat"]
layout_mode = 2
text = "Miktar"

[node name="SellQuantityInput" type="SpinBox" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Sat"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SellTotalLabel" type="Label" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Sat"]
layout_mode = 2
text = "Toplam: 0 Altın"
theme_override_font_sizes/font_size = 16

[node name="SellButton" type="Button" parent="MarginContainer/VBox/MainHBox/TradingPanel/VBox/OrderTypeTabs/Sat"]
unique_name_in_owner = true
layout_mode = 2
text = "Sat"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="MyOrdersPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/MyOrdersPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/MyOrdersPanel/VBox"]
layout_mode = 2
text = "Emirlerim"
theme_override_font_sizes/font_size = 18

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/MyOrdersPanel/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox/MyOrdersPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MyOrdersList" type="VBoxContainer" parent="MarginContainer/VBox/MyOrdersPanel/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
